// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CSOStatus Component Matches the snapshot when account does not exist 1`] = `
<DocumentFragment>
  <div>
    <p>
      Account does not exist, form will be here
    </p>
    <div>
      <button
        class="normal-white btn"
        type="button"
      >
        Cancel
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CSOStatus Component Matches the snapshot when account exists 1`] = `
<DocumentFragment>
  <div>
    <p>
      Account exists! Proceed
    </p>
    <div>
      <button
        class="normal-white btn"
        type="button"
      >
        Cancel
      </button>
    </div>
  </div>
</DocumentFragment>
`;
